--- a/.github/workflows/semver.yml
+++ b/.github/workflows/semver.yml
@@ -21,5 +21,5 @@ jobs:
         git config --global user.email "noreply@algolymp.ru"
 
         MESSAGE=$(git log -1 --pretty=%B)
-        git tag $VERSION -m $MESSAGE
-        git push origin $VERSION
+        git tag -a $VERSION -m $MESSAGE
+        git push origin --tags
