--- a/.github/workflows/semver.yml
+++ b/.github/workflows/semver.yml
@@ -16,10 +16,9 @@ jobs:
       run: |
         VERSION=$(./scripts/semver.sh)
         echo "Project version: $VERSION"
-
         git config --global user.name "Gornak40[bot]"
         git config --global user.email "noreply@algolymp.ru"
-
         MESSAGE=$(git log -1 --pretty=%B)
+        echo "Tag message: $MESSAGE"
         git tag -a $VERSION -m $MESSAGE
         git push origin --tags
