--- a/.github/workflows/semver.yml
+++ b/.github/workflows/semver.yml
@@ -22,5 +22,5 @@ jobs:
 
         MESSAGE=$(git log -1 --pretty=%s)
         echo "Tag message: $MESSAGE"
-        git tag -a $VERSION -m $MESSAGE
+        git tag -a "$VERSION" -m "$MESSAGE"
         git push origin --tags
