--- a/.github/workflows/semver.yml
+++ b/.github/workflows/semver.yml
@@ -13,6 +13,8 @@ jobs:
       with:
         fetch-depth: 0
     - name: Run version bump script
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         VERSION=$(./scripts/semver.sh)
         echo "Project version: $VERSION"
